# KVCache

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  appveyor.yml  conanfile.py
exampleData/: exampleRun.sh  testKVCacheData.txt
scripts/: CLang_setCompiler.sh  GCC_setCompiler.sh  cmake_build.sh  cmake_configure.sh  cmake_full.sh  cmake_test.sh  conan_install.sh  cpp_tools_install.sh  gcovr_coverage.sh  make_documentation.sh  optional_cpp_tools_install.sh  required_cpp_tools_install.sh
src/: CMakeLists.txt  main.cpp
src/KVCache/: CMakeLists.txt
src/KVCache/CacheEvictionStrategies/: AbstractCacheEvictionStrategy.cpp  AbstractCacheEvictionStrategy.h  AbstractCacheEvictionStrategyInsertionOrdering.cpp  AbstractCacheEvictionStrategyInsertionOrdering.h  CacheEvictionFIFO.cpp  CacheEvictionFIFO.h  CacheEvictionLIFO.cpp  CacheEvictionLIFO.h  CacheEvictionLRU.cpp  CacheEvictionLRU.h  CacheEvictionMRU.cpp  CacheEvictionMRU.h  UnknownCacheEvictionStrategyException.h
src/KVCache/KVCacheImpl/: KVCacheImpl.cpp  KVCacheImpl.h  KVExceptionsHelper.h
src/KVCache/KVCacheInterface/: KVCacheAbstract.cpp  KVCacheAbstract.h  KVCacheException.h  KVEnums.h  KVOptionalParameters.cpp  KVOptionalParameters.h
src/KVCache/MemoryCache/: AbstractMemoryCache.cpp  AbstractMemoryCache.h  MemoryCacheMap.cpp  MemoryCacheMap.h  UnknownMemCacheTypeException.h
src/KVCache/StorageCache/: AbstractStorageCache.cpp  AbstractStorageCache.h  StorageCacheLinearFile.cpp  StorageCacheLinearFile.h  StorageCacheNone.cpp  StorageCacheNone.h  UnknownStorageCacheTypeException.h
src/factorial/: CMakeLists.txt  factorial.cpp  factorial.h
src/prime/: CMakeLists.txt  prime.cpp  prime.h
test/: CMakeLists.txt  CacheEvictionStrategyCreationTests.cpp  CacheEvictionStrategyRuntimeTests.cpp  KVCacheCreationTests.cpp  KVCacheRuntimeTests.cpp  MemoryCacheMapCreationTests.cpp  MemoryCacheMapRuntimeTests.cpp  StorageCacheCreationTests.cpp  StorageCacheLinearFileRuntimeTests.cpp  StorageCacheNoneRuntimeTests.cpp  catch_main.cpp  creationTests.cpp  testHelpers.h  tests.cpp
